[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI/Player/main.png" type="Texture" id=3]
[ext_resource path="res://UI/Player/extralife.png" type="Texture" id=4]
[ext_resource path="res://UI/HeartDisplay.gd" type="Script" id=16]
[ext_resource path="res://UI/Player/spritesheet_heart.png" type="Texture" id=17]

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Assets/misc/fonts/Prozen-Regular.otf"

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = SubResource( 13 )

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.55 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "heart_loss", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.55 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "heart_loss", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.55 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "heart_loss", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Assets/misc/fonts/Prozen-Regular.otf"

[sub_resource type="DynamicFont" id=12]
size = 28
font_data = SubResource( 11 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextDisplay" type="Node2D" parent="."]
position = Vector2( 0, 8 )
z_index = 1

[node name="TextHolder" type="TextureRect" parent="TextDisplay"]
margin_right = 164.0
margin_bottom = 76.0
__meta__ = {
"_editor_description_": ""
}

[node name="ScoreText" type="RichTextLabel" parent="TextDisplay/TextHolder"]
anchor_left = 0.00197421
anchor_right = 0.00197424
anchor_bottom = 10.0
margin_left = 7.67623
margin_top = 8.02888
margin_right = 307.676
margin_bottom = -719.971
rect_clip_content = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "

"
text = "

"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HealthText" type="RichTextLabel" parent="TextDisplay/TextHolder"]
anchor_left = 0.00197421
anchor_right = 0.00197424
anchor_bottom = 10.0
margin_left = 7.67623
margin_top = 80.2888
margin_right = 337.676
margin_bottom = -647.711
rect_clip_content = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Life:"
text = "Life:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Update" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HeartDisplay" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="ScoreMain" type="TextureRect" parent="HeartDisplay"]
margin_top = 24.0
margin_right = 428.0
margin_bottom = 59.0
texture = ExtResource( 3 )
expand = true

[node name="HealthMain" type="TextureRect" parent="HeartDisplay"]
margin_top = 96.0
margin_right = 428.0
margin_bottom = 131.0
texture = ExtResource( 3 )
expand = true

[node name="Heart1" type="Sprite" parent="HeartDisplay/HealthMain"]
position = Vector2( 90.75, 8 )
scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 17 )
offset = Vector2( 15, 0 )
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeartDisplay/HealthMain/Heart1"]
anims/heart_loss = SubResource( 2 )
anims/heart_normal = SubResource( 3 )
anims/heart_unfold = SubResource( 4 )

[node name="Heart2" type="Sprite" parent="HeartDisplay/HealthMain"]
position = Vector2( 152, 8 )
scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 17 )
offset = Vector2( 15, 0 )
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeartDisplay/HealthMain/Heart2"]
anims/heart_loss = SubResource( 5 )
anims/heart_normal = SubResource( 6 )
anims/heart_unfold = SubResource( 7 )

[node name="Heart3" type="Sprite" parent="HeartDisplay/HealthMain"]
position = Vector2( 216, 8 )
scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 17 )
offset = Vector2( 15, 0 )
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeartDisplay/HealthMain/Heart3"]
anims/heart_loss = SubResource( 8 )
anims/heart_normal = SubResource( 9 )
anims/heart_unfold = SubResource( 10 )

[node name="Lives" type="Node2D" parent="."]
position = Vector2( -8.99902, -10.5114 )

[node name="Sprite" type="Sprite" parent="Lives"]
position = Vector2( 856, 632 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
offset = Vector2( 96, 16 )

[node name="SpacerText" type="RichTextLabel" parent="Lives"]
margin_left = 1173.01
margin_top = 666.023
margin_right = 1213.01
margin_bottom = 706.023
custom_fonts/normal_font = SubResource( 12 )
bbcode_text = "x"
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesText" type="RichTextLabel" parent="Lives"]
anchor_left = 0.00197421
anchor_right = 0.00197424
anchor_bottom = 10.0
margin_left = 1199.58
margin_top = 660.617
margin_right = 1239.58
margin_bottom = 700.617
rect_clip_content = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "
"
text = "
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="timeout" from="Update" to="." method="_on_Update_timeout"]
